# gkeepapi

./: .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  ISSUE_TEMPLATE.md  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  semgrep.yml
docs/: Makefile  conf.py  gkeepapi.rst  index.rst  modules.rst
examples/: resume.py
gkeepapi/: .codeclimate.yml  __init__.py  exception.py  node.py
src/gkeepapi/: __init__.py  exception.py  node.py
test/: test_client.py  test_nodes.py
test/data/: keep-00  keep-01  keep-02  reminder-01  reminder-04
