[build-system]
requires = [
    "flit_core >=3.2,<4",
]
build-backend = "flit_core.buildapi"

[project]
name = "gkeepapi"
version = "1.0.0"
authors = [
  { name="Kai", email="z@kwi.li" },
]
description = "An unofficial Google Keep API client"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "gpsoauth >= 1.0.2",
  "future >= 0.16.0",
]

[project.optional-dependencies]
dev = [
  "black>=23.3.0",
  "ruff>=0.0.284",
  "coverage>=7.2.5",
]

[project.urls]
"Homepage" = "https://github.com/kiwiz/gkeepapi"
"Bug Tracker" = "https://github.com/kiwiz/gkeepapi/issues"


[tool.black]
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
select = [
  # https://beta.ruff.rs/docs/rules/
  "F",  # pyflakes
  "E",  # pycodestyle error
  "W",  # pycodestyle warning
  "C90",  # mccabe
  "I",  # isort
  "N",  # pep8-naming
  "D",  # pydocstyle
  "UP",  # pyupgrade
  "YTT",  # flake8-2020
  "ANN",  # flake8-annotations
  "ASYNC",  # flake8-async
  "S",  # flake8-bandit
  "BLE",  # flake8-blind-except
  # "FBT",  # flake8-boolean-trap
  "B",  # flake8-bugbear
  "A",  # flake8-builtins
  "COM",  # flake8-commas
  "CPY",  # flake8-copyright
  "C4",  # flake8-comprehensions
  "DTZ",  # flake8-datetimez
  "T10",  # flake8-debugger
  "DJ",  # flake8-django
  "EM",  # flake8-errmsg
  "EXE",  # flake8-executable
  "FA",  # flake8-future-annotations
  "ISC",  # flake8-implicit-str-concat
  "ICN",  # flake8-import-conventions
  "G",  # flake8-logging-format
  "INP",  # flake8-no-pep420
  "PIE",  # flake8-pie
  "T20",  # flake8-print
  "PYI",  # flake8-pyi
  "PT",  # flake8-pytest-style
  "Q",  # flake8-quotes
  "RSE",  # flake8-raise
  "RET",  # flake8-return
  "SLF",  # flake8-self
  "SLOT",  # flake8-slots
  "SIM",  # flake8-simplify
  "TID",  # flake8-tidy-imports
  "TCH",  # flake8-type-checking
  "INT",  # flake8-gettext
  "ARG",  # flake8-unused-arguments
  "PTH",  # flake8-use-pathlib
  # "TD",  # flake-todos
  # "FIX",  # flake-fixme
  # "ERA",  # eradicate
  "PD",  # pandas-vet
  "PGH",  # pygrep-hooks
  "PLC",  # pylint convention
  "PLE",  # pylint error
  "PLR",  # pylint refactor
  "PLW",  # pylint warning
  # "TRY",  # tryceratops
  "FLY",  # flynt
  "NPY",  # numpy-specific
  "AIR",  # airflow-specific
  "PERF",  # performance
  "RUF",  # ruff-specific
]
ignore = [
  "E501",  # line-too-long -- disabled as black takes care of this
  "COM812",  # missing-trailing-comma -- conflicts with black?
  "N802",  # invalid-function-name -- too late!
  "N818",  # error-suffix-on-exception-name -- too late!
  "D415",  # ends-in-punctuation -- too aggressive
  "EM101",  # raw-string-in-exception -- no thanks
  "EM102",  # f-string-in-exception -- no thanks
  "PLR0913",  # too-many-arguments -- no thanks
  "D105",  # undocumented-magic-method -- no thanks
  "ANN101",  # missing-type-self -- unnecessary
  "ANN102",  # missing-type-cls -- unnecessary
]

[tool.ruff.pydocstyle]
convention = "google"
